package com.demo.enums;

/**
 * @author Vito Nguyen (<a href="https://github.com/cuongnh28">...</a>)
 */

public enum ERole {
  ROLE_USER,
  ROLE_ADMIN
}
