package com.demo.payload.response;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

/**
 * @author Vito Nguyen (<a href="https://github.com/cuongnh28">...</a>)
 */

@Data
@NoArgsConstructor
@AllArgsConstructor
public class MessageResponse {

  private String message;

}
