@startuml

  class MavenWrapperDownloader {
    -WRAPPER_VERSION : String
    -DEFAULT_DOWNLOAD_URL : String
    -MAVEN_WRAPPER_PROPERTIES_PATH : String
    -MAVEN_WRAPPER_JAR_PATH : String
    -PROPERTY_NAME_WRAPPER_URL : String
    +main() : void
    +getPasswordAuthentication() : PasswordAuthentication
  }

package com.bezkoder.spring.security.jwt {
  class SpringBootSecurityJwtApplicationTests {
    +contextLoads() : void
  }
  class SpringBootSecurityJwtApplication {
    +main() : void
  }
}

package com.bezkoder.spring.security.jwt.advice {
  class TokenControllerAdvice {
    +handleTokenRefreshException() : ErrorMessage
  }
  class ErrorMessage {
    -statusCode : int
    -timestamp : Date
    -message : String
    -description : String
    +getStatusCode() : int
    +getTimestamp() : Date
    +getMessage() : String
    +getDescription() : String
  }
}

package com.bezkoder.spring.security.jwt.controllers {
  class AuthController <<Controller>> {
  }
  class TestController <<Controller>> {
    +allAccess() : String
    +userAccess() : String
    +moderatorAccess() : String
    +adminAccess() : String
  }
}

package com.bezkoder.spring.security.jwt.exception {
  class TokenRefreshException {
    -serialVersionUID : long
  }
}

package com.bezkoder.spring.security.jwt.models {
  class RefreshToken <<Entity>> {
    -id : long
    -user : User
    -token : String
    -expiryDate : Instant
    +getId() : long
    +setId() : void
    +getUser() : User
    +setUser() : void
    +getToken() : String
    +setToken() : void
    +getExpiryDate() : Instant
    +setExpiryDate() : void
  }
  class User <<Entity>> {
    -id : Long
    -username : String
    -email : String
    -password : String
    -roles : Set<Role>
    +getId() : Long
    +setId() : void
    +getUsername() : String
    +setUsername() : void
    +getEmail() : String
    +setEmail() : void
    +getPassword() : String
    +setPassword() : void
  }
  enum ERole {
  }
  class Role <<Entity>> {
    -id : Integer
    -name : ERole
    +getId() : Integer
    +setId() : void
    +getName() : ERole
    +setName() : void
  }
}

package com.bezkoder.spring.security.jwt.payload.request {
  class SignupRequest {
    -username : String
    -email : String
    -role : Set<String>
    -password : String
    +getUsername() : String
    +setUsername() : void
    +getEmail() : String
    +setEmail() : void
    +getPassword() : String
    +setPassword() : void
    +getRole() : Set<String>
    +setRole() : void
  }
  class TokenRefreshRequest {
    -refreshToken : String
    +getRefreshToken() : String
    +setRefreshToken() : void
  }
  class LoginRequest {
    -username : String
    -password : String
    +getUsername() : String
    +setUsername() : void
    +getPassword() : String
    +setPassword() : void
  }
}

package com.bezkoder.spring.security.jwt.payload.response {
  class TokenRefreshResponse {
    -accessToken : String
    -refreshToken : String
    -tokenType : String
    +getAccessToken() : String
    +setAccessToken() : void
    +getRefreshToken() : String
    +setRefreshToken() : void
    +getTokenType() : String
    +setTokenType() : void
  }
  class MessageResponse {
    -message : String
    +getMessage() : String
    +setMessage() : void
  }
  class JwtResponse {
    -token : String
    -type : String
    -refreshToken : String
    -id : Long
    -username : String
    -email : String
    -roles : List<String>
    +getAccessToken() : String
    +setAccessToken() : void
    +getTokenType() : String
    +setTokenType() : void
    +getId() : Long
    +setId() : void
    +getEmail() : String
    +setEmail() : void
  }
}

package com.bezkoder.spring.security.jwt.repository {
  interface RefreshTokenRepository <<Repository>> {
  }
  interface RoleRepository <<Repository>> {
  }
  interface UserRepository <<Repository>> {
  }
}

package com.bezkoder.spring.security.jwt.security {
  class WebSecurityConfig {
    -unauthorizedHandler : AuthEntryPointJwt
    +authenticationJwtTokenFilter() : AuthTokenFilter
    +configure() : void
    +authenticationProvider() : DaoAuthenticationProvider
    +authenticationManagerBean() : AuthenticationManager
    +authenticationManager() : AuthenticationManager
    +passwordEncoder() : PasswordEncoder
    +configure() : void
    +filterChain() : SecurityFilterChain
  }
}

package com.bezkoder.spring.security.jwt.security.jwt {
  class JwtUtils {
    -logger : Logger
    -jwtSecret : String
    -jwtExpirationMs : int
    +generateJwtToken() : String
    +generateTokenFromUsername() : String
    +getUserNameFromJwtToken() : String
    +validateJwtToken() : boolean
  }
  class AuthEntryPointJwt {
    -logger : Logger
    -mapper : ObjectMapper
    +commence() : void
  }
  class AuthTokenFilter {
    -jwtUtils : JwtUtils
    -userDetailsService : UserDetailsServiceImpl
    -logger : Logger
    +doFilterInternal() : void
  }
}

package com.bezkoder.spring.security.jwt.security.services {
  class RefreshTokenService <<Service>> {
    -refreshTokenDurationMs : Long
    -refreshTokenRepository : RefreshTokenRepository
    -userRepository : UserRepository
    +findByToken() : Optional<RefreshToken>
    +createRefreshToken() : RefreshToken
    +verifyExpiration() : RefreshToken
    +deleteByUserId() : int
  }
  class UserDetailsServiceImpl <<Service>> {
    +loadUserByUsername() : UserDetails
  }
  class UserDetailsImpl {
    -serialVersionUID : long
    -id : Long
    -username : String
    -email : String
    -password : String
    +build() : UserDetailsImpl
    +getId() : Long
    +getEmail() : String
    +getPassword() : String
    +getUsername() : String
    +isAccountNonExpired() : boolean
    +isAccountNonLocked() : boolean
    +isCredentialsNonExpired() : boolean
  }
}

' --- Relatii ---
RefreshTokenRepository --> RefreshToken
RefreshTokenRepository --> User
RoleRepository --> ERole
RoleRepository --> Role
UserRepository --> User
WebSecurityConfig --> AuthEntryPointJwt
WebSecurityConfig --> AuthTokenFilter
WebSecurityConfig --> UserDetailsServiceImpl
JwtUtils --> UserDetailsImpl
AuthTokenFilter --> UserDetailsServiceImpl
RefreshTokenService --> TokenRefreshException
RefreshTokenService --> RefreshToken
RefreshTokenService --> RefreshTokenRepository
RefreshTokenService --> UserRepository
UserDetailsServiceImpl --> User
UserDetailsServiceImpl --> UserRepository
UserDetailsImpl --> User
TokenControllerAdvice --> TokenRefreshException
AuthController --> TokenRefreshException
AuthController --> ERole
AuthController --> RefreshToken
AuthController --> Role
AuthController --> User
AuthController --> LoginRequest
AuthController --> SignupRequest
AuthController --> TokenRefreshRequest
AuthController --> JwtResponse
AuthController --> MessageResponse
AuthController --> TokenRefreshResponse
AuthController --> RoleRepository
AuthController --> UserRepository
AuthController --> JwtUtils
AuthController --> RefreshTokenService
AuthController --> UserDetailsImpl

@enduml